[gd_scene load_steps=15 format=2]

[ext_resource path="res://codigo/singleplayer/grosso/06/feedback.gd" type="Script" id=1]
[ext_resource path="res://img/tela_feedback_novo.png" type="Texture" id=2]
[ext_resource path="res://img/tela_score.png" type="Texture" id=3]
[ext_resource path="res://img/corpo_feedback.png" type="Texture" id=4]
[ext_resource path="res://img/feliz_telafeed.png" type="Texture" id=5]
[ext_resource path="res://font/AMPLESOFT MEDIUM.OTF" type="DynamicFontData" id=6]
[ext_resource path="res://img/seguir_2.png" type="Texture" id=7]
[ext_resource path="res://img/seguir_1.png" type="Texture" id=8]
[ext_resource path="res://img/menu_2.png" type="Texture" id=9]
[ext_resource path="res://img/menu_1.png" type="Texture" id=10]
[ext_resource path="res://img/jogarNovamente_1.png" type="Texture" id=11]
[ext_resource path="res://img/jogarNovamente_2.png" type="Texture" id=12]
[ext_resource path="res://img/seta.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 6 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 857.178
margin_top = 206.731
margin_right = 1369.18
margin_bottom = 327.731
texture = ExtResource( 3 )

[node name="corpo" type="TextureRect" parent="."]
visible = false
margin_left = 30.1869
margin_top = 34.5038
margin_right = 681.187
margin_bottom = 941.504
texture = ExtResource( 4 )

[node name="sentimento" type="TextureRect" parent="."]
margin_left = 71.5779
margin_top = 65.0709
margin_right = 483.578
margin_bottom = 729.071
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="."]
margin_left = 490.0
margin_top = 73.0
margin_right = 1349.0
margin_bottom = 205.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Label2" type="Label" parent="."]
margin_left = 870.0
margin_top = 246.0
margin_right = 1355.0
margin_bottom = 316.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Seguir" type="TextureButton" parent="."]
visible = false
margin_left = 794.813
margin_top = 408.933
margin_right = 1130.81
margin_bottom = 524.933
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Menu" type="TextureButton" parent="."]
margin_left = 702.663
margin_top = 595.253
margin_right = 1203.66
margin_bottom = 711.253
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 10 )

[node name="jogarNovamente3" type="TextureButton" parent="."]
visible = false
margin_left = 643.655
margin_top = 421.765
margin_right = 1330.66
margin_bottom = 537.765
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 12 )

[node name="Seguir2" type="TextureButton" parent="."]
visible = false
margin_left = 798.329
margin_top = 408.933
margin_right = 1134.33
margin_bottom = 524.933
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="seta1" type="TextureRect" parent="."]
visible = false
margin_left = 209.449
margin_top = 402.63
margin_right = 283.449
margin_bottom = 473.63
texture = ExtResource( 13 )

[node name="seta2" type="TextureRect" parent="."]
visible = false
margin_left = 327.925
margin_top = 412.421
margin_right = 401.925
margin_bottom = 483.421
texture = ExtResource( 13 )
[connection signal="pressed" from="Seguir" to="." method="_on_Seguir_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="jogarNovamente3" to="." method="_on_jogarNovamente3_pressed"]
[connection signal="pressed" from="Seguir2" to="." method="_on_Seguir2_pressed"]
